// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Alcohol Risk Info should match snapshot 1`] = `
Object {
  "CardIcon": <NoAlcohol
    color="#00847F"
    height="1.125rem"
    width="1.125rem"
  />,
  "color": "green",
  "description": "None",
  "id": "alcohol",
  "subTitle": "None",
  "title": "Alcohol",
}
`;

exports[`Create Alcohol Risk Info should match snapshot for drinker 1`] = `
Object {
  "CardIcon": <Alcohol
    color="red"
    height="1.125rem"
    width="1.125rem"
  />,
  "color": "red",
  "description": "HeavyDrinker",
  "id": "alcohol",
  "subTitle": "HeavyDrinker",
  "title": "Alcohol",
}
`;
